--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+/*! @import */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body,
+html {
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 16px;
+  font-family: Lato, sans-serif;
+  font-variant-ligatures: common-ligatures;
+  line-height: 1.67;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
 }
