--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-/*! @import */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body {
   color: rgba(0, 0, 0, 0.9);
@@ -64,13 +59,10 @@ section h3 {
 }
 
 .quickfacts p {
-  @apply mb-5 flex;
+  @apply mb-5 flex items-center;
 }
-.quickfacts p img {
-  @apply mr-3 flex-initial;
-}
-.quickfacts p span {
-  @apply flex-initial;
+.quickfacts p .icon {
+  @apply min-w-5 min-h-5 mr-4;
 }
 
 .details {
