Add Love Letters to the Future project

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@ section h3 {
   @apply mt-0;
 }
 
+.projects {
+  page-break-after: always;
+}
+
 .openSource .details .description {
   @apply mt-2;
 }
